--- a/client/src/app/public/components/product-card/product-card.component.html
+++ b/client/src/app/public/components/product-card/product-card.component.html
@@ -17,7 +17,7 @@
     <img
       [src]="
         'http://localhost:8000/svg/' +
-        (product.isFavorite === 1 ? 'filled-heart.svg' : 'hjärta.svg')
+        (product.isFavorite === 1 ? 'filled-heart.svg' : 'favorites.svg')
       "
       alt="Heart"
       [ngClass]="product.isFavorite === 1 ? 'filled-heart' : 'empty-heart'"
