--- a/client/src/app/public/routes/home/home.component.html
+++ b/client/src/app/public/routes/home/home.component.html
@@ -2,5 +2,8 @@
   <app-hero [title]="heroTitle" [text]="heroText"></app-hero>
   <app-spot></app-spot>
   <app-product-grid></app-product-grid>
+  <app-feature-list></app-feature-list>
   <!-- Här kommer du senare att lägga till fler komponenter -->
 </div>
+
+<app-footer></app-footer>
