--- a/client/src/app/public/routes/product-details/product-details.component.html
+++ b/client/src/app/public/routes/product-details/product-details.component.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 <div *ngIf="loading" class="loading">Laddar produkt...</div>
 <div *ngIf="error" class="error">Ett fel uppstod: {{ error }}</div>
 
@@ -16,7 +14,7 @@
     <div class="product-info">
       <h1>{{ product.name }}</h1>
       <p>{{ product.brand }}</p>
-      <p>{{ product.description }}</p>
+      <p *ngIf="product.description">{{ product.description }}</p>
       <p class="price">{{ product.price }} SEK</p>
 
       <button (click)="addToCart()" class="cart-button">Lägg i varukorg</button>
