Added routes, fixed the product service

--- a/client/src/app/new-products/new-products.component.html
+++ b/client/src/app/new-products/new-products.component.html
@@ -1,7 +1,7 @@
 <div class="content">
     <h3>Ny produkt</h3>
   
-    <form (ngSubmit)="handleSubmit()">
+    <form (ngSubmit)="handleSubmit()" #productForm="ngForm">
       <label for="name">Namn:</label>
       <input
         type="text"
