--- a/client/src/app/public/routes/product-details/product-details.component.html
+++ b/client/src/app/public/routes/product-details/product-details.component.html
@@ -13,7 +13,7 @@
 
     <div class="product-info">
       <h1>{{ product.name }}</h1>
-      <p>{{ product.brand }}</p>
+      <p class="brand">{{ product.brand }}</p>
       <p *ngIf="product.description">{{ product.description }}</p>
       <p class="price">{{ product.price }} SEK</p>
 
