--- a/client/src/app/public/components/similar-products/similar-products.component.css
+++ b/client/src/app/public/components/similar-products/similar-products.component.css
@@ -2,13 +2,6 @@
   margin: 40px 0;
 }
 
-.similar-products h2 {
-  font-size: 22px;
-  margin-bottom: 20px;
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-}
-
 .similar-products-container {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
@@ -57,6 +50,14 @@
 @media (min-width: 640px) {
   .similar-products-container {
     grid-template-columns: repeat(2, 1fr);
+  }
+
+  .similar-products h2 {
+    font-size: 1.5rem;
+    margin-bottom: 20px;
+    margin-top: 50px;
+    color: #333;
+    text-align: center;
   }
 }
 
