--- a/client/src/app/public/routes/product-details/product-details.component.css
+++ b/client/src/app/public/routes/product-details/product-details.component.css
@@ -33,10 +33,12 @@
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.product-info p {
+.product-info .brand {
   margin-bottom: 15px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  color: gray;
+  font-size: 14px;
 }
 
 .price {
@@ -44,20 +46,27 @@
   font-size: 18px;
 }
 
-.cart-button {
-  background-color: #000;
-  color: white;
-  border: none;
-  padding: 12px 24px;
-  font-size: 16px;
+.product-details .cart-button {
+  display: block;
+  width: 100%;
+  max-width: 600px; /* Match image width for better alignment */
+  padding: 15px;
+  font-size: 1.2rem;
+  text-align: center;
+  background-color: white;
+  border: 2px solid black;
+  border-radius: 4px;
+  color: black;
   cursor: pointer;
+  margin-bottom: 30px;
+  order: 4; /* Button comes last */
+  margin-top: 15px;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  margin-top: 20px;
 }
 
-.cart-button:hover {
-  background-color: #333;
+.product-details .cart-button:hover {
+  background-color: rgb(222, 218, 218);
 }
 
 .loading,
