Converted price from number to string in frontend

--- a/client/src/app/new-products/new-products.component.html
+++ b/client/src/app/new-products/new-products.component.html
@@ -48,7 +48,7 @@
   
       <label for="price">Pris:</label>
       <input
-        type="number"
+        type="text"
         id="price"
         name="price"
         [(ngModel)]="formData.price"
