--- a/client/src/app/public/routes/home/home.component.html
+++ b/client/src/app/public/routes/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="home-page">
   <app-hero [title]="heroTitle" [text]="heroText"></app-hero>
   <app-spot></app-spot>
